FAQ fix on mobile

--- a/assets/less/start.less
+++ b/assets/less/start.less
@@ -1326,6 +1326,7 @@ left:5%;
 display:flex;
 align-items:center;
 justify-content:center;
+flex-wrap: wrap;
  
 }
 .beginning .row .col-md-6:first-child{
